# makerscanner

./: .gitignore  ActiveStereo.cbp  ActiveStereo.depend  ActiveStereo.layout  ActiveStereoApp.cpp  ActiveStereoApp.h  ActiveStereoMain.cpp  ActiveStereoMain.h  Cameras.cpp  Cameras.h  CaptureThread.cpp  CaptureThread.h  ChangeLog  DistanceToReferenceDialog.cpp  DistanceToReferenceDialog.h  INSTALL  IndividualPixels.h  Makefile.am  Makefile.in  MakerscannerWin3.cbp  PointCloud.cpp  PointCloud.h  PointCloudPoint.cpp  PointCloudPoint.h  README  README.md  ScanStatus.cpp  ScanStatus.h  ScanThread.cpp  ScanThread.h  SetConfig.c  SetConfig.h  SetHorz.c  SetHorz.h  bootstrap.sh  camview.cpp  camview.h  configure.ac  laserIcon.xcf  resource.rc
CAD/: LaserCameraConnector.ipt  LaserMountBase.ipt  LaserMountBase2.ipt  LaserMountPole2.ipt  LaserMountTop.ipt  PS3_eye_holder_from_base.ipt  lasercameraconnector.err  lasermountbase.err  lasermountbase2.err  lasermountpole2.err  lasermounttop.err  makerscannerAssembly.iam  makerscannerAssembly.ipj  ps3_eye.err  ps3_eye.ipt  ps3_eye_assembly2.iam  ps3_eye_holder_from_base.err
CAD/Design Data/: Balloon.xml  CenterMark.xml  Clearance.xls  Colors.xml  DatumTarget.xml  Dimension.xml  FeatureControlFrame.xml  Hatch.xml  HoleTable.xml  Id.xml  Layers.xml  Leader.xml  Lighting.xml  Materials.xml  ObjectDefaults.xml  PartsList.xml  ProteinMapping.xml  RevisionTable.xml  SheetMetalRules.xml  SheetMetalUnfold.xml  Standard.xml  SurfaceTexture.xml  Table.xml  Text.xml  Thread.xls  ViewAnnotation.xml  Weld.xml  WeldBead.xml
CAD/Design Data/AEC Exchange/Support/: CableTrayConnector.xml  ConduitConnector.xml  DWGSettings.ini  DuctConnector.xml  ElectricalConnector.xml  PartAtom.xml  PipeConnector.xml  TranslationReport.xsl
CAD/Design Data/AEC Exchange/Support/AuthoringTemplates/: Air Terminal.xml  Casework.xml  Categories.xml  Communication Devices.xml  Data Devices.xml  Doors.xml  Duct Accessories.xml  Electrical Equipment.xml  Electrical Fixtures.xml  Fire Alarm Devices.xml  Furniture Systems.xml  Furniture.xml  Generic Models.xml  Lighting Fixtures.xml  Mechanical Equipment.xml  Pipe Accessories.xml  Plumbing Fixtures.xml  Security Devices.xml  Specialty Equipment.xml  Telephone Devices.xml  Windows.xml
CAD/Design Data/DWG-DXF/: FlatPatternExportOpts.xml  exportdwg.ini  exportdxf.ini  importacad.ini  importdxf.ini  importmdt.ini
CAD/Design Data/GOST/: PartsListGroup1.xls  PartsListGroup1b.xls  PartsListTemplate.xls
CAD/Design Data/Simulation/Report/: Configuration.htm  Constraint.htm  Contact.htm  Figure.htm  Load.htm  Main.htm  Material.htm  ReactionForces.htm  Simulation.htm
CAD/OldVersions/: makerscannerAssembly.ipj.old.bak
CAD/Solidworks 2013/: lasercameraconnector.SLDPRT  lasermountbase.SLDPRT  lasermountbase2.SLDPRT  lasermountpole2.SLDPRT  lasermounttop.SLDPRT  ps3_eye.SLDPRT  ps3_eye_holder_from_base.SLDPRT
CAD/Templates/: Sheet Metal.ipt  Standard.idw  Standard.ipn
CAD/Templates/English/: ANSI (in).dwg  ANSI (in).idw  Sheet Metal (in).ipt  Standard (in).iam  Standard (in).ipn  Standard (in).ipt  Weldment (ANSI).iam  am_ansi.dwg
CAD/Templates/Metric/: ANSI (mm).dwg  BSI.dwg  BSI.idw  DIN.dwg  DIN.idw  GB.dwg  GB.idw  GOST.dwg  GOST.idw  ISO.dwg  ISO.idw  JIS.dwg  JIS.idw  Sheet Metal (DIN).ipt  Standard (DIN).iam  Standard (DIN).ipn  Standard (DIN).ipt  Standard (mm).iam  Standard (mm).ipt  Weldment (ANSI - mm).iam  Weldment (BSI).iam  Weldment (DIN).iam  Weldment (GB).iam  Weldment (ISO).iam  Weldment (JIS).iam  am_bsi.dwg  am_din.dwg  am_gb.dwg  am_iso.dwg  am_jis.dwg
Documentation/: 3DMakerScannerMath.vsdx
windows-package/: AUTHORS  README  installer.iss
wxsmith/: ActiveStereoframe.wxs  DistanceToReferenceDialog.wxs
